// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserService getList appends the filter object as a query string 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/company/users?groupId=1&limit=50&userName=Mr.+Peanutbutter",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`UserService getList makes the request to the correct URL 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/company/users?",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`UserService getProfile makes the API call with "me" in the url if no argument is provided 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/company/users/me",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`UserService getProfile makes the API call with provided LOS Id in the url 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/company/users/<TEST_LOS_ID>",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;
